[package]
name = "riti"
version = "0.1.0"
authors = ["Pu Xingyu <pu.stshine@gmail.com>"]
edition = "2018"
description = "An expirimental GUI library for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22"
font-kit = "0.10.0"
rustybuzz = "0.3.0"
webrender = { git = "https://github.com/servo/webrender" }
webrender_api = { git = "https://github.com/servo/webrender" }
